src/objects/saMessageDetail__c.object
<CustomObject>
    <fields>
        <fullName>ReplyComment__c</fullName>
        <label>回答</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHARED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserReceiveEmail__c</fullName>
        <formula>User__r.SAReceiveEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserReceiveEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saMessageDetail_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>saMessagePublishedDatetime__c</fullName>
        <formula>saMessage__r.PublishedDatetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>saMessagePublishedDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>saMessageType__c</fullName>
        <formula>TEXT(saMessage__r.Type__c)</formula>
        <label>saMessageType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>saMessage__c</fullName>
        <label>saMessage</label>
        <referenceTo>saMessage__c</referenceTo>
        <relationshipLabel>saMessageDetail</relationshipLabel>
        <relationshipName>saMessageDetail_MD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>saMessageDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MSGD-{00000000}</displayFormat>
        <label>saMessageDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>